libecs/tests/Core/Scripting/tests/invalid/property/invalid_property2.pvt
component Test
    Vector3 pos;
    # No un-necesserary tokens at start or end of line